--- a/tex/sections/2-function_shape_analysis.tex
+++ b/tex/sections/2-function_shape_analysis.tex
@@ -1,110 +1,51 @@
-Before beginning with a derivation of the elastic full Procrustes mean, it is
-important to establish a notational and mathematical framework for the
-treatment of planar shapes.
-While the restriction to the 2D case might seem a major one, it still covers
-all shape data extracted from e.g.\ imagery and is therefore very applicable in
-practice.
-Examples of objects that can be analyzed in this way are handwritten digits or
-symbols, the outlines bones and organs in medical images, or even movement
-trajectories on a map.
-
-All these objects may be naturally represented as planar curves $\beta : [0,1]
-\rightarrow \mathbb{R}^2$ with $\beta(t) = (x(t),\, y(t))^T$, where $x(t)$ and
-$y(t)$ are the scalar-valud \textit{coordinate functions}.
-Calculations in 2D, and in particular the derivation of the
-full Procrustes mean, are greatly simplified by using complex notation.
-Going forward, we will therefore identify $\mathbb{R}^2$ with $\mathbb{C}$ and
-always use complex notation when representing a planar curve:
+As a starting point, it is important to establish a notational and mathematical framework for the treatment of planar shapes.
+While the restriction to the 2D case might seem a major one, it still covers all shape data extracted from e.g.\ imagery and is therefore very applicable in practice.
+The outline of a 2D object may be naturally represented by a planar curves $\beta : [0,1] \rightarrow \mathbb{R}^2$ with $\beta(t) = (x(t),\, y(t))^T$, where $x(t)$ and $y(t)$ are the scalar-valued \textit{coordinate functions}.
+Calculations in 2D, and in particular the derivation of the full Procrustes mean, are greatly simplified by using complex notation.
+Going forward, we will therefore identify $\mathbb{R}^2$ with $\mathbb{C}$ and always use complex notation when representing a planar curve
 $$\beta : [0,1] \rightarrow \mathbb{C}, \quad \beta(t) = x(t) + i\, y(t).$$
+For reasons that will become apparent in Section \ref{theo:srv} we furthermore assume $\beta$ to be absolute continuous so that $\beta \in \mathcal{AC}([0,1],\, \mathbb{C})$.
+\textbf{[Maybe better define spaces here? Hilbert space? Inner product? Basis expansin with complex coefficients. Or do that later on SRV level?]}
 
 \subsection{Equivalence Classes and Shape Invariance}
 \label{theo:inv}
-The concept of shape is closely related to the concept of invariance under the
-transformations of scaling, translation and rotation.
-When considering the shape of a curve, we additionally have to take into
-account invariance with respect to re-parametrisation.
-This can be seen by noting that the curves $\beta(t)$ and $\beta(\gamma(t))$,
-with some \textit{warping function} $\gamma : [0,1] \rightarrow [0,1]$
-monotonically increasing and differentiable, have the same image and therefore
-represent the same geometrical object.
-We can say that the actions of translation, scaling, rotation and
-re-parametrization are \textit{equivalence relations} with respect to shape, as
-each action leaves the shape of the curve untouched and only changes the way
-the shape is represented.
+The concept of shape is closely related to the concept of invariance under the transformations of scaling, translation and rotation.
+When considering the shape of a curve, we additionally have to take into account invariance with respect to re-parametrisation.
+This can be seen by noting that the curves $\beta(t)$ and $\beta(\gamma(t))$, with some re-parametrisation or \textit{warping function} $\gamma : [0,1] \rightarrow [0,1]$ monotonically increasing and differentiable, have the same image and therefore represent the same geometrical object.
+We can say that the actions of translation, scaling, rotation and re-parametrisation are \textit{equivalence relations} with respect to shape, as each action leaves the shape of the curve untouched and only changes the way the shape is represented.
+The shape of a curve can then be defined as the respective \textit{equivalence class}, i.e. the set of all possible shape preserving transformations of the curve.
+As two equivalence classses are neccessarily either disjoint or identical, we can consider two curves as having the same shape, if they are elements of the same equivalence class \parencite[see][40]{SrivastavaKlassen2016}.
 
-The shape of a curve can then be defined as the respective \textit{equivalence
-class}, i.e. the set of all possible shape preserving transformations of the
-curve.
-As two equivalence classses are neccessarily either disjoint or identical, we
-can consider two curves as having the same shape, if they are elements of the
-same equivalence class \parencite[see][40]{SrivastavaKlassen2016}.
-
-\begin{definition}[Equivalence relation, equivalence class and quotient space] 
-    A relation $\backsim$ on a set $X$ is called an \textbf{equivalence
-    relation} if, for all $x,y,z \in X$, it has the following properties:
-    \begin{itemize}[noitemsep,topsep=0pt]
-        \item[i.] $x \backsim x$ (reflexivity)
-        \item[ii.] $x \backsim y \Rightarrow y \backsim x$ (symmetry)
-        \item[iii.] $x \backsim y, y \backsim z \Rightarrow x \backsim z$
-        (transitivity)
-    \end{itemize}
-    The \textbf{equivalence class} $[x]$ of $x \in X$ is given by the set of
-    all $y \in X$ so that $x \backsim y$.
-    The \textbf{quotient space} $X \big/ {\backsim}$ of $X$ under the relation
-    $\backsim$ is the set of all equivalence classes in $X$. 
-\end{definition}
-
-\noindent We now want to define an equivalence relations with respect to shape.
-With this in mind, let us first consider how the discussed transformations act
+We now want to define an equivalence relation with respect to shape.
+This is usually done using the notion of \textit{group actions} and \textit{product groups}, to which a brief introduction may be found in \cite[Chap.\ 3]{SrivastavaKlassen2016}.
+Let us first consider how the discussed transformations act
 individually on the set of parametrized planar curves with complex
 representation $\beta : [0,1]
 \rightarrow \mathbb{C}$:
 \begin{itemize}
   \item
-    The \textbf{translation} group $\mathbb{C}$ acts on $\beta$ by $(\xi, \beta)
-    \mapsto \beta + \xi$, for any $\xi \in \mathbb{C}$.
-    We can consider two curves as equivalent with respect to translation
-    $\beta_1 \backsim \beta_2$, if there exists a complex scalar $\tilde\xi \in
-    \mathbb{C}$ so that $\beta_1 = \beta_2  + \tilde\xi$.
-    For this relation an equivalence class is $[\beta] = \{\beta + \xi\, |\,
-    \beta : [0,1] \rightarrow \mathbb{C},\, \xi \in \mathbb{C}\}$.
+    The \textbf{translation} group $\mathbb{C}$ acts on $\beta$ by $(\xi, \beta) \xmapsto{\text{Trl}} \beta + \xi$, for any $\xi \in \mathbb{C}$.
+    We can consider two curves as equivalent with respect to translation $\beta_1 \overset{\text{Trl}}{\backsim} \beta_2$, if there exists a complex scalar $\tilde\xi \in \mathbb{C}$ so that $\beta_1 = \beta_2  + \tilde\xi$.
+    Then, for some function $\beta$, the related equivalence class with respect to translation is given by $[\beta]_{\text{Trl}} = \{\beta + \xi\, |\, \xi \in \mathbb{C}\}$.
   \item 
-    The \textbf{scaling} group $\mathbb{R}^+$ acts on $\beta$ by $(\lambda, \beta)
-    \mapsto \lambda \beta$, for any $\lambda \in \mathbb{R}^+$.
-    We define $\beta_1 \backsim \beta_2$, if there exists a scalar
-    $\tilde\lambda \in \mathbb{R}^+$ so that $\beta_1 = \tilde\lambda \beta_2$.
-    An equivalence class is $[\beta] = \{\lambda\beta\,|\,\beta : [0,1]
-    \rightarrow \mathbb{C},\, \lambda \in \mathbb{R}^+\}$.
+    The \textbf{scaling} group $\mathbb{R}^+$ acts on $\beta$ by $(\lambda, \beta) \xmapsto{\text{Scl}} \lambda \beta$, for any $\lambda \in \mathbb{R}^+$.
+    We define $\beta_1 \overset{\text{Scl}}{\backsim} \beta_2$, if there exists a scalar $\tilde\lambda \in \mathbb{R}^+$ so that $\beta_1 = \tilde\lambda \beta_2$.
+    An equivalence class is $[\beta]_{\text{Scl}} = \{\lambda\beta\,|\, \lambda \in \mathbb{R}^+\}$.
   \item 
-    The \textbf{rotation} group $[0,2\pi]$ acts on $\beta$ by $(\theta, \beta)
-    \mapsto e^{i\theta} \beta$, for any $\theta \in [0,2\pi]$.
-    We define $\beta_1 \backsim \beta_2$, if there exists a $\tilde\theta \in
-    [0,2\pi]$ with $\beta_1 = e^{i\tilde\theta} \beta_2$.
-    An equivalence class is $[\beta] = \{e^{i\theta}\beta\,|\, \beta : [0,1]
-    \rightarrow \mathbb{C},\, \theta \in [0,2\pi]\}$.
+    The \textbf{rotation} group $[0,2\pi]$ acts on $\beta$ by $(\theta, \beta) \xmapsto{\text{Rot}}  e^{i\theta} \beta$, for any $\theta \in [0,2\pi]$.
+    We define $\beta_1 \overset{\text{Rot}}{\backsim} \beta_2$, if there exists a $\tilde\theta \in [0,2\pi]$ with $\beta_1 = e^{i\tilde\theta} \beta_2$.
+    An equivalence class is $[\beta]_{\text{Rot}} = \{e^{i\theta}\beta\,|\, \theta \in [0,2\pi]\}$.
   \item 
-    The \textbf{re-parametrization} group $\Gamma$ acts on $\beta$ by $(\gamma,\beta)
-    \mapsto \beta \circ \gamma$, for any $\gamma \in \Gamma$ with $\Gamma$
-    being the set of monotonically increasing and differentiable warping
-    functions.
-    We define $\beta_1 \backsim \beta_2$, if there exists a warping function
-    $\tilde\gamma \in \Gamma$ with $\beta_1 = \beta_2 \circ \tilde\gamma$.
-    An equivalence class is $[\beta] = \{\beta \circ \gamma\,|\, \beta : [0,1]
-    \rightarrow \mathbb{C},\, \gamma \in \Gamma\}$.
+    The \textbf{warping} group $\Gamma$ acts on $\beta$ by $(\gamma,\beta) \xmapsto{\text{Wrp}} \beta \circ \gamma$, for any $\gamma \in \Gamma$ with $\Gamma$ being the set of monotonically increasing and differentiable warping functions.
+    We define $\beta_1 \overset{\text{Wrp}}{\backsim} \beta_2$, if there exists a warping function $\tilde\gamma \in \Gamma$ with $\beta_1 = \beta_2 \circ \tilde\gamma$.
+    An equivalence class is $[\beta]_{\text{Wrp}} = \{\beta \circ \gamma\,|\, \gamma \in \Gamma\}$.
 \end{itemize}
-In a next step, we can consider how these transformations act in concert and
-whether they \textit{commute}, that is, whether the order of applying the
-transformations changes outcomes.
-Consider for example the actions of the rotation and scaling product group
-$\mathbb{R}^+ \times [0,2\pi]$ given by $((\lambda, \theta), \beta) \mapsto
-\lambda e^{i\theta} \beta$, which clearly commute as $\lambda
-(e^{i\theta}\beta) = e^{i\theta}(\lambda\beta)$.
-However, the joint actions of scaling, rotation, and translation do not
-commute, as $\lambda e^{i\theta}(\beta + \xi) \neq \lambda e^{i\theta}\beta +
-\xi$.
-It follows that the order of translating and rotating or scaling matters and
-when defining such a joint action, one usually takes the translation to act on
-the already scaled and rotated curve.
+In a next step, we can consider how these transformations act in concert and whether they \textit{commute}, that is, whether the order of applying the transformations changes outcomes.
+Consider for example the actions of the rotation and scaling product group $\mathbb{R}^+ \times [0,2\pi]$ given by $(\lambda, (\theta, \beta)) \xmapsto{\text{Scl} + \text{Rot}} \lambda e^{i\theta} \beta$.
+These clearly commute, because the order of applying rotation or scaling do not make a difference, as $\lambda(e^{i\theta}\beta) = e^{i\theta}(\lambda\beta)$.
+However, the joint actions of scaling and translation do not commute, as $\lambda(\beta + \xi) \neq \lambda\beta + \xi$, with the same holding for rotation and translation.
+It follows that the order of translating and rotating or scaling matters and when defining such a joint action, one usually takes the translation to act on the already scaled and rotated curve.
+\textbf{[Maybe better define rot/scaling on the centered and retranslated curve, as in \cite{Stoecker2021}?]}
 \begin{definition}[Euclidean similarity transformation] 
   We define an \textbf{Euclidean similarity transformation} of a curve $\beta :
   [0,1] \rightarrow \mathbb{C}$ as the joint action of scaling, rotation, and
@@ -127,27 +68,63 @@ shape of a planar curve.
   \in \mathbb{C},\, \lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi],\, \gamma
   \in \Gamma\right\}. $$
   The \textbf{shape space} is then given by the corresponding quotient space 
-  $$\mathbb{C}^{[0,1]} \big/ \mathbb{C} \rtimes \left( \mathbb{R}^+ \times
-  [0,2\pi] \right) \times \Gamma = \left\{[\beta]|\beta \in
+  $$\mathcal{AC}([0,1], \mathbb{C}) \big/ \mathbb{C} \rtimes \left( \mathbb{R}^+ \times
+  [0,2\pi] \right) \times \Gamma = \left\{[\beta]\,|\,\beta \in
   \mathbb{C}^{[0,1]}\right\},$$
   where the symbol \enquote{$\rtimes$} denotes a semi-direct product, i.e. that
-  the translation group acts \enquote{after} scaling and rotation
+  the translation group acts \enquote{after} scaling and rotation and where we assumed the $\beta$'s to be absolutely continuous \textbf{[Note: this notation is crap.]}
   \parencite[for details see][Chapter 3]{SrivastavaKlassen2016}.
 \end{definition}
+\noindent \textbf{[This doesn't lead well to the next subsection.]} As we are ultimately interested in calculating shape means, we now need to find a way to measure simmilarity and dissimilarity between equivalence classes in the form of a distance function.
+The basic idea is to find unique curves as a representation for each equivalence class, so that distance in shape space can be equivalently calculated as the distance between these representations in curve space.
+In short we want to find intersections of the function space, so that there is a one-to-one relationship between elements of that interesection and the equivalence classes in shape space.
 
-\noindent As we are interested in calculating shape means, we now need to find a way to
-measure simmilarity and dissimilarity between shapes.
-More formally, this means that we want to measure distances between equivalence
-classes in shape space.
-As equivalence classes and quotient spaces are already quite abstract concepts
-and as the discussed spaces may be quite complex, we need to find a way of
-simplifying calculations in shape space.
-The basic idea is to find unique curves as a representation for each equivalence
-class, so that distance in shape space can be equivalently calculated as the
-distance between these curves.
-In short we want to find intersections of the function space, so that there is
-a one-to-one relationship between elements of that interesection and the
-squivalence classes in shape space.
+\subsection{The SRV Framework and the Elastic Distance}
+\label{theo:srv}
+Instead of working with the original curve $\beta$, for the calculation of \textit{elastic} (parametrization-invariant) means, it is advantageous to work with its corresponding \textit{square-root-velocity function} (SRVF) given by
+$$ \quad q(t) = \frac{\dot{\beta}(t)}{\sqrt{|| \dot{\beta}(t) ||}} \quad \text{for} \,\, \dot{\beta}(t) \neq 0, \,\, \text{with} \,\, q \in \mathbb{L}^2([0,1], \mathbb{C}). $$
+The original curve $\beta$ can be obtained from its SRV representation up to translation by the back transformation $\beta(t) = \beta(0) + \int_0^t q(s) || q(s) || ds$.
+As this representation makes use of derivatives, any curve $\beta$ that has a SRVF must fulfill some kind of differentiability constraint, where in this case this holds for any absolutely continuous $\beta \in \mathcal{AC}([0,1],\, \mathbb{C})$ \parencite[see][134]{SrivastavaKlassen2016}.
+The SRVFs are considered elements of a Hilbert space, given by $\mathcal{L}^2([0,1],\,\mathbb{C})$ equipped with the complex inner product $\langle \cdot, \cdot \rangle$ and corresponding norm $||\cdot||$, where the complex inner product of $q,q' \in \mathcal{L}^2([0,1],\,\mathbb{C})$ is given by
+$$ \langle q, q' \rangle = \int_0^1 \overline{q(t)} q'(t) dt \,, $$
+with $\overline{z} = \operatorname{Re}(z) - i \operatorname{Im}(z)$ denoting the complex conjugate.
+
+As we can always recover the original curve up to translation, the SRV representation holds all relevant information about the shape of a curve.
+This means we can perform any shape analysis equivalently on SRV level, as we can later always transform the results of e.g.\ a mean calculation back to original curve level.
+\textbf{[This should probably be shown... I.e. procrustes mean of SRV + integral = procrustes mean of orig curve.]}
+
+\begin{lemma}
+  The actions of the translation, scaling, rotation, and re-parametrization groups commute on SRV level.
+\end{lemma}
+
+\noindent\textit{Proof.} The SRVF $\tilde q(t)$ of  $\tilde\beta(t) = \lambda e^{i\theta}\beta\left(\gamma(t)\right) + \xi$ is given by
+$$ \tilde q (t) 
+  = \frac{\dot{\tilde\beta}(t)}{\sqrt{| \dot{\tilde\beta}(t) |}} 
+  = \frac{\lambda e^{i\theta} \dot\beta\left(\gamma(t)\right) \dot\gamma(t)}{\sqrt{||\lambda e^{i\theta} \dot\beta\left(\gamma(t)\right) \dot\gamma(t)||}} 
+  = \sqrt{\lambda} e^{i\theta} \frac{\dot\beta\left(\gamma(t)\right)}{\sqrt{||\dot\beta\left(\gamma(t)\right)||}} \sqrt{\dot\gamma(t)} 
+  = \sqrt\lambda e^{i\theta} \left( q \circ \gamma \right) \sqrt{\dot\gamma(t)},$$
+where the result is the same, irrespective of the order of applying the transformations.
+
+\begin{remark}
+  It follows, that the individual transformations translate to SRV level by
+    $$\text{i.)} \,\, (\xi, q) \xmapsto{\text{Trl}} q \qquad \text{ii.)} \,\, (\lambda, q) \xmapsto{\text{Scl}} \sqrt\lambda q \qquad \text{iii.)} \,\, (\theta, q) \xmapsto{\text{Rot}} e^{i\theta} q \qquad \text{iv.)} \,\, (\gamma, q) \xmapsto{\text{Wrp}} (q \circ \gamma) \sqrt{\dot\gamma}, $$
+  where, in particular, the SRVF is invariant to translations of the original curve.
+\end{remark}
+
+\noindent This invariance with respect to translation is a nice property of the SRV framework, as it means that we can identify the shape of a curve as the equivalence class of its respective SRVF modulo scaling, rotation, and warping, but we do not need to consider translation.
+\begin{definition}[Shape (SRV level)]
+  The \textbf{shape} of an absolutely continuous, planar curve $\beta \in \mathcal{AC}([0,1],\, \mathbb{C})$ is given by the equivalence class of its SRV representation $q = \frac{\dot\beta(t)}{\sqrt{|\dot\beta(t)|}} \in \mathbb{L}^2([0,1],\,\mathbb{C})$ modulo scaling, rotation and re-parametrization
+  $$[q] = \left\{\sqrt\lambda e^{i\theta}(q \circ \gamma) \sqrt{\dot\gamma(t)} \,|\, \lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi],\, \gamma
+  \in \Gamma\right\},$$
+  and it holds that $[\beta] \cong [q]$. The \textbf{shape space} can then be identified with 
+  $$\mathbb{L}^2([0,1], \mathbb{C}) \big/ \mathbb{R}^+ \times [0,2\pi] \times \Gamma = \left\{[q]\,|\,q \in \mathbb{L}^2({[0,1],\,\mathbb{C})}\right\}.$$
+\end{definition}
+
+\textbf{[Why use the SRV framework?]}
+\textbf{[Deal with Wrp variance by elastic distance and fixing a certain parametrisation. Shape distance to Elastic distance!]}
+
+\subsection{The Full Procrustes Mean for Planar Curves}
+\label{theo:proc}
 Consider, for example, the action of the translation group $\mathbb{C}$
 with corresponding quotient space $\mathbb{C}^{[0,1]} \big/ \mathbb{C} =
 \left\{[\beta] \,|\, \beta \in \mathbb{C}^{[0,1]} \right\}$ and $[\beta] =
@@ -191,10 +168,6 @@ We will now take a look at a different way of constructing distance measures
 for quotient spaces, one dealing with rotation and one dealing with
 re-parametrization.
 
-
-\subsection{The Full Procrustes Mean for Planar Curves}
-\label{theo:proc}
-
 The \textit{full Procrustes distance} is a widely used distance function in
 classical shape analysis that allows for scale and rotation invariant shape
 distance calculation.
@@ -227,21 +200,9 @@ when calculating the distance between them.
 
 \textbf{[Define an intersection of the quotient space by projections. Proof that this is good. Procrustes Fits.]}
 
-\subsection{Elastic Means and the Square-Root-Velocity Framework}
-\label{theo:srv}
-Instead of working with the original curve $\beta$, for calculation of
-\textit{elastic} means it is advantageous to work with its corresponding
-\textit{square root velocity curve} given by
-$$ q : [0, 1] \rightarrow \mathbb{C}, \quad q(t) =
-\frac{\dot{\beta}(t)}{\sqrt{|| \dot{\beta}(t) ||}} \quad \text{for} \,\,
-\dot{\beta}(t) \neq 0 $$
-where original curve $\beta$ can be obtained up to translation by back
-transformation via $\beta(t) = \beta(0) + \int_0^t q(s) || q(s) || ds$.
-Moreover, if the original curve is of unit length the SRV curve will be
-automatically normalized:
-$$ ||q|| = \sqrt{\langle q, q \rangle} = \sqrt{ \int_0^1 \overline{q(t)} q(t)
-\, dt } = \sqrt{ \int_0^1 |q(t)|^2 \, dt} = \sqrt{\int_0^1 |\dot{\beta}(t)| \,
-dt} = \sqrt{1} = 1. $$
+Moreover, if the original curve is of unit length the SRV curve will be automatically normalized \textbf{[Keep this for later]}:
+$$ ||q|| = \sqrt{\langle q, q \rangle} = \sqrt{ \int_0^1 \overline{q(t)} q(t) \, dt } = \sqrt{ \int_0^1 |q(t)|^2 \, dt} = \sqrt{\int_0^1 |\dot{\beta}(t)| \, dt} = \sqrt{1} = 1. $$
+
 \subsection{Functional Data Analysis of Sparse and Irregular Planar Curves}
 \label{theo:sparse}
 
