Finish cover page, chapter 2.2

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -54,18 +54,22 @@
   publisher = {Springer},
   location = {New York}
 }
-@Article{Steyer2021,
+@Misc{Steyer2021,
   author = {Steyer, L. and Stöcker, A. and Greven, S.},
   title = {Elastic analysis of irregularly or sparsely sampled curves},
   year = 2021,
-  note = {Preprint}
+  eprint={2104.11039},
+  archivePrefix={arXiv},
+  primaryClass={stat.ME}
 }
-@Article{Stoecker2021,
+@Misc{Stoecker2021,
   author = {Stöcker, A and Greven, S.},
   title = {Functional additive regression on shape and form manifolds of planar
       curves},
   year = 2021,
-  note = {Preprint}
+  eprint={2109.02624},
+  archivePrefix={arXiv},
+  primaryClass={stat.ME}
 }
 @Book{Wood2017,
     title = {Generalized Additive Models: An Introduction with R},
