--- a/tex/sections/3-elastic_proc2d_mean.tex
+++ b/tex/sections/3-elastic_proc2d_mean.tex
@@ -19,7 +19,10 @@ $$ \hat{\mu} = \argmax_{\mu:[0,1]\rightarrow\mathbb{C}} \sum_{i=1}^n \langle \mu
 The expression for $d^2_F(\mu,\beta_i)$ in the case of planar curves is derived in appendix \ref{app:deriv-full-proc-dist}.
 
 
-\subsection{The Full Procrustes mean}
+
+
+
+\section{The Full Procrustes mean}
 Consider a set of planar SRV curves $q_1,\dots,q_n : [0,1] \rightarrow \mathbb{C}$ of unit length $||q_i|| = 1$ for all $i$.
 The \textit{full Procrustes mean} $\hat{\mu}$ is given by
 \begin{align*}
@@ -37,8 +40,10 @@ The \textit{full Procrustes mean} $\hat{\mu}$ is given by
 \end{align*}
 with the solution given by the eigenfunction corresponding to the largest eigenvector of the complex empirical covariance function $\hat{C}(s,t) = n^{-1} \sum_{i=1}^n q_i(t) \overline{q_i(s})$.
 
-\newpage
-\subsection{The Full Procrustes Mean in a fixed basis}
+
+
+
+\section{The Full Procrustes Mean in a fixed basis}
 To avoid having to sample the estimated covariance surface $\hat{C}(s,t)$ on a large grid when calculating its leading eigenfunction, it might be preferable to calculate this eigenfunction from the vector of basis coefficients directly.
 After choosing a basis representation $b = (b_1, \dots, b_k)$ with $b_j : \mathbb{R} \rightarrow \mathbb{R}$ real-valued basis functions, we want to estimate complex coefficients $\theta_j \in \mathbb{C}$ so that the Full Procrustes mean of SRV curves is given by $\hat{\mu}(t) = \sum_{j=1}^k \hat{\theta}_j b_j(t) = b^T \hat{\theta}$:
 \begin{align*}
@@ -79,8 +84,10 @@ One may solve this by using Lagrange optimization with the Langrangian
 \end{align*}
 
 
-\newpage
-\subsection{Estimation of the covariance surface $C(s,t)$}
+
+
+
+\section{Estimation of the covariance surface $C(s,t)$}
 Consider the following model for independent curves
 \begin{equation}
     Y_i(t_{ij}) = \mu(t_{ij}, \mathbf{x}_i) + E_i(t_{ij}) + \epsilon(t_{ij}),
