rename section files

--- a/tex/report.tex
+++ b/tex/report.tex
@@ -119,17 +119,17 @@
 \pagenumbering{arabic}
 \chapter{Introduction}
 \label{sec:intro}
-\input{sections/1-introduction}
+\input{sections/1-intro}
 
 \newpage
 \chapter{Functional and Shape Data Analysis of Planar Curves}
 \label{sec:theo}
-\input{sections/2-function_shape_analysis}
+\input{sections/2-theory}
 
 \newpage
 \chapter{The Elastic Full Procrustes Means for Planar Curves}
 \label{sec:mean}
-\input{sections/3-elastic_proc2d_mean}
+\input{sections/3-estimation}
 
 \newpage
 \chapter{Estimation Strategy}
