--- a/tex/report.tex
+++ b/tex/report.tex
@@ -122,31 +122,32 @@
 \input{sections/1-intro}
 
 \newpage
-\chapter{Functional and Shape Data Analysis of Planar Curves}
+\chapter{Elastic Shape Analysis of Planar Curves}
 \label{sec:theo}
-\input{sections/2-theory}
+\input{sections/2-distance}
 
 \newpage
-\chapter{The Elastic Full Procrustes Means for Planar Curves}
+\chapter{Elastic Full Procrustes Means for Sparse and Irregular Planar Curves}
 \label{sec:mean}
-\input{sections/3-estimation}
+\input{sections/3-mean}
 
 \newpage
 \chapter{Estimation Strategy}
 \label{sec:algo}
+\input{sections/4-estimation}
 
 \newpage
 \chapter{Empirical Application}
 \label{sec:app}
-
-\newpage
-\chapter{Outlook}
-\label{sec:outl}
+\input{sections/5-application}
 
 \newpage
 \chapter{Summary}
 \label{sec:sum}
+\input{sections/6-summary}
 
+
+% ---- References
 \newpage
 \nocite{*}
 \printbibliography[heading=bibintoc] % Insert bilbiography and create toc entry
@@ -157,9 +158,9 @@
 \newpage
 \appendix
 \addtocontents{toc}{\protect\setcounter{tocdepth}{1}}
-\chapter{Derivations and Proofs}
+\chapter{Appendix}
 \label{app:deriv}
-\input{sections/a-derivations}
+\input{sections/a-appendix}
 
 \newpage
 \chapter{Supplementary Materials}
