--- a/tex/sections/1-intro.tex
+++ b/tex/sections/1-intro.tex
@@ -13,8 +13,8 @@ Instead, the focus lies purely on their differences in  \textit{shape}, a widely
 \end{definition}
 \noindent Additionally, the functional approach to shape analysis necessitates invariance relating to parametrisation, as only the image of any function describing e.g.\ an object's outline, but not its parametrisation, is indacative of the object's shape.
 
-When analysing object data, a prerequisite for many statistical methods is the ability to measure the simmilarity and dissimilarity of observations in the form of a distance function.
-\cite{SrivastavaEtAl2011} introduced a mathematical framework for the analysis of shapes as curves using their square-root-velocity (SRV) representation and a so called \enquote{elastic} distance, which is invariant under re-parametrisation \textbf{(is it, really?)}.
+When analysing object data, a prerequisite for many statistical methods is the ability to measure the distance between observations.
+\cite{SrivastavaEtAl2011} introduced a mathematical framework for the shape analysis of curves, by using their square-root-velocity (SRV) representation and an elastic metric, which takes invariance under re-parametrisation into account.
 While this SRV framework has been used for the calculation of elastic shape means, which also include invariance under scaling, rotation and translation, most of these approaches focus on \enquote{Riemannian} or \enquote{geodesic} mean concepts \textbf{[cite examples here? Srivastava?]}.
 
 Another popular mean concept from landmark shape analysis is the \textit{Full Procrustes Mean}, which has particularly nice properties in two dimensions, when identifying $\mathbb{R}^2$ with $\mathbb{C}$ \parencite[see][Chap.\ 8]{DrydenMardia2016}, as its calculation can be shown to be related to an eigenfunction problem of the complex covariance surface of the observed curves.
