--- a/tex/sections/2-distance.tex
+++ b/tex/sections/2-distance.tex
@@ -5,26 +5,20 @@ Calculations in 2D, and in particular the derivation of the full Procrustes mean
 Going forward, we will therefore identify $\mathbb{R}^2$ with $\mathbb{C}$ and always use complex notation when representing a planar curve
 $$\beta : [0,1] \rightarrow \mathbb{C}, \quad \beta(t) = x(t) + i\, y(t).$$
 For reasons that will become apparent in Section \ref{theo:srv} we furthermore assume $\beta$ to be absolute continuous so that $\beta \in \mathcal{AC}([0,1],\, \mathbb{C})$.
-\textbf{[Maybe better define spaces here? Hilbert space? Inner product? Basis expansin with complex coefficients. Or do that later on SRV level?]}
-
 
 
 
 \section{Equivalence Classes and Shape Invariance}
 \label{theo:inv}
-The concept of shape is closely related to the concept of invariance under the transformations of scaling, translation and rotation.
+As mentioned in the introduction, shape is usually defined by its invariance under the transformations of scaling, translation, and rotation.
 When considering the shape of a curve, we additionally have to take into account invariance with respect to re-parametrisation.
 This can be seen by noting that the curves $\beta(t)$ and $\beta(\gamma(t))$, with some re-parametrisation or \textit{warping function} $\gamma : [0,1] \rightarrow [0,1]$ monotonically increasing and differentiable, have the same image and therefore represent the same geometrical object.
-We can say that the actions of translation, scaling, rotation and re-parametrisation are \textit{equivalence relations} with respect to shape, as each action leaves the shape of the curve untouched and only changes the way the shape is represented.
+We can say that the actions of translation, scaling, rotation, and re-parametrisation are \textit{equivalence relations} with respect to shape, as each action leaves the shape of the curve untouched and only changes the way the shape is represented.
 The shape of a curve can then be defined as the respective \textit{equivalence class}, i.e. the set of all possible shape preserving transformations of the curve.
 As two equivalence classses are neccessarily either disjoint or identical, we can consider two curves as having the same shape, if they are elements of the same equivalence class \parencite[see][40]{SrivastavaKlassen2016}.
 
-We now want to define an equivalence relation with respect to shape.
-This is usually done using the notion of \textit{group actions} and \textit{product groups}, to which a brief introduction may be found in \cite[Chap.\ 3]{SrivastavaKlassen2016}.
-Let us first consider how the discussed transformations act
-individually on the set of parametrized planar curves with complex
-representation $\beta : [0,1]
-\rightarrow \mathbb{C}$:
+When defining such an equivalence class, one has to first consider how the individual transformations act on the set of parametrized planar curves with complex representation $\beta : [0,1] \rightarrow \mathbb{C}$.
+This is usually done using the notion of \textit{group actions} and \textit{product groups} (for multiple transformations acting at once), to which a brief introduction may be found in \cite[Chap.\ 3]{SrivastavaKlassen2016}.
 \begin{itemize}
   \item
     The \textbf{translation} group $\mathbb{C}$ acts on $\beta$ by $(\xi, \beta) \xmapsto{\text{Trl}} \beta + \xi$, for any $\xi \in \mathbb{C}$.
@@ -46,9 +40,10 @@ representation $\beta : [0,1]
 In a next step, we can consider how these transformations act in concert and whether they \textit{commute}, that is, whether the order of applying the transformations changes outcomes.
 Consider for example the actions of the rotation and scaling product group $\mathbb{R}^+ \times [0,2\pi]$ given by $(\lambda, (\theta, \beta)) \xmapsto{\text{Scl} + \text{Rot}} \lambda e^{i\theta} \beta$.
 These clearly commute, because the order of applying rotation or scaling do not make a difference, as $\lambda(e^{i\theta}\beta) = e^{i\theta}(\lambda\beta)$.
-However, the joint actions of scaling and translation do not commute, as $\lambda(\beta + \xi) \neq \lambda\beta + \xi$, with the same holding for rotation and translation.
-It follows that the order of translating and rotating or scaling matters and when defining such a joint action, one usually takes the translation to act on the already scaled and rotated curve.
+However, the joint actions of scaling and translation do not commute, as $\lambda(\beta + \xi) \neq \lambda\beta + \xi$, with the same holding for the joint action of rotation and translation.
+It follows that the order of translating and rotating or scaling matters and when defining such a joint action one usually takes the translation to act on the already scaled and rotated curve.
 \textbf{[Maybe better define rot/scaling on the centered and retranslated curve, as in \cite{Stoecker2021}?]}
+
 \begin{definition}[Euclidean similarity transformation] 
   We define an \textbf{Euclidean similarity transformation} of a curve $\beta :
   [0,1] \rightarrow \mathbb{C}$ as the joint action of scaling, rotation, and
@@ -57,12 +52,14 @@ It follows that the order of translating and rotating or scaling matters and whe
   with $\xi \in \mathbb{C}$, $\lambda \in \mathbb{R}^+$, and $\theta \in
   [0,2\pi]$ \parencite[see][62]{DrydenMardia2016}.
 \end{definition}
+
 \noindent With respect to the action of re-parametrization, we can note that it
 necessarily commutes with all Euclidean similarity transformations, as those
 only act on the image of $\beta$, while the former only acts on the
 parametrization.
 Putting everything together, we can finally give a formal definition of the
 shape of a planar curve.
+
 \begin{definition}[Shape]
   The \textbf{shape} of a planar curve $\beta : [0,1] \rightarrow \mathbb{C}$
   is given by its equivalence class with respect to all Euclidean similarity
@@ -81,28 +78,28 @@ shape of a planar curve.
 
 \noindent We now want to construct a distance function in shape space.
 As equivalence classes as the elements of shape spaces are quite complex objects, this is usually done by calculating distances in the underlying functional space, where one optimizes over all possible elements of both equivalence classes.
-For example, when assuming $\beta_1$, $\beta_2 \in \mathbb{L}^2([0,1],\, \mathbb{C})$ we might calculate distances in shape space by optimizing over their $\mathbb{L}^2$-distance
+For example, when assuming $\beta_1$, $\beta_2 \in \mathbb{L}^2([0,1],\, \mathbb{C})$ we might calculate distances in shape space by optimizing over the $\mathbb{L}^2$-distance
 $$d([\beta_1], [\beta_2]) = \inf_{\tilde \beta_1 \in [\beta_1],\,\tilde \beta_2 \in [\beta_2]} d_{\mathbb{L}^2}(\tilde \beta_1, \tilde \beta_2) = \inf_{\tilde\beta_1 \in [\beta_1],\, \tilde\beta_2 \in [\beta_2]} || \tilde\beta_1 - \tilde\beta_2 ||.$$
 However, this approach runs into problems, when considering whether all shape-preserving transformations act by isometries on this distance, i.e.\ whether equal changes in translation, rotation, scaling and re-parametrization to both curves change their distance. 
 As it turns out, neither re-parametrization nor scaling are distance preserving when using the $\mathbb{L}^2$-distance, as $||\beta_1 \circ \gamma - \beta_2 \circ \gamma|| \neq ||\beta_1 - \beta_2||$ and $||\lambda \beta_1 - \lambda \beta_2|| \neq ||\beta_1 - \beta_2||$.
+However, the later is very easy to deal with as we will see, for example by rescaling all curves to unit-length.
 
 
 
-\section{The SRV Framework and the Elastic Distance}
+\section{The Square-Root-Velocity Framework}
 \label{theo:srv}
-Let us first consider only the issues of re-parametrization and translation.
-A solution proposed by \cite{SrivastavaEtAl2011} is the use of the \textit{square-root-velocity} (SRV) framework and an \textit{elastic} metric, the Fisher-Rao Riemannian metric, which is isometric with respect to re-parametrization of the input curves.
-The calculation of the Fisher-Rao metric between two curves can be simplified by using the usual $\mathbb{L}^2$-metric between their respective SRV curves.
+Let us first focus on the issue of re-parametrization, which is much harder to solve.
+A solution proposed by \cite{SrivastavaEtAl2011}, is to ditch the $\mathbb{L}^2$-metric in favor of an \textit{elastic metric}, which is isometric with respect to re-parametrization.
+Calculation of this metric, the Fisher-Rao Riemannian metric, can be greatly simplified by using the \textit{square-root-velocity} (SRV) framework, as the Fisher-Rao metric of two curves can equivalently be calculated as the $\mathbb{L}^2$-distance of their respective SRV curves.
 
-\begin{definition}[Elastic distance \parencite{SrivastavaEtAl2011}]
-  For $\beta_1$, $\beta_2 \in \mathcal{AC}([0,1],\,\mathbb{C})$ with $[\beta_1]_{\text{Trl+Wrp}}$, $[\beta_2]_{\text{Trl+Wrp}}$ their respective equivalence classes modulo translation and warping, the \textbf{elastic distance} between $[\beta_1]_{\text{Trl+Wrp}}$ and $[\beta_2]_{\text{Trl+Wrp}}$ is given by
-  $$d([\beta_1]_{\text{Trl+Wrp}},\, [\beta_2]_{\text{Trl+Wrp}}) = \inf_{\gamma \in \Gamma} || q_1 - (q_2 \circ \gamma) \sqrt{\dot\gamma} ||,$$
-  where $q_1, q_2$ denote the corresponding \textbf{square-root-velocity functions} (SRVFs) given by
-$$ \quad q(t) = \frac{\dot{\beta}(t)}{\sqrt{|| \dot{\beta}(t) ||}} \quad \text{for} \,\, \dot{\beta}(t) \neq 0, \,\, \text{with} \,\, q \in \mathbb{L}^2([0,1], \mathbb{C}). $$
+\begin{definition}[SRV function of a planar curve]
+  For $\beta \in \mathcal{AC}([0,1],\,\mathbb{C})$, the corresponding \textbf{SRV function} (SRVF) is given by
+$$ \quad q(t) = \frac{\dot{\beta}(t)}{\sqrt{|| \dot{\beta}(t) ||}} \quad \text{for} \,\, \dot{\beta}(t) \neq 0, \,\, \text{with} \,\, q \in \mathbb{L}^2([0,1], \mathbb{C}),$$
+  where the original curve $\beta$ can be re-constructed from its SRVF, up to translation, by $\beta(t) = \beta(0) + \int_0^t q(s) || q(s) || ds$.
 \end{definition}
 
-\noindent When working in the SRV framework, the original curve $\beta$ can always be obtained from its SRVF up to translation, by the back transformation $\beta(t) = \beta(0) + \int_0^t q(s) || q(s) || ds$.
-As this representation makes use of derivatives, any curve $\beta$ that has a SRVF must fulfill some kind of differentiability constraint, where in this case this holds for any absolutely continuous $\beta \in \mathcal{AC}([0,1],\, \mathbb{C})$ \parencite[see][134]{SrivastavaKlassen2016}.
+\noindent As this representation makes use of derivatives, any curve $\beta$ that has a SRVF must fulfill some kind of differentiability constraint.
+Here, it is enough to consider only curves that are absolutely continuous $\beta \in \mathcal{AC}([0,1],\, \mathbb{C})$, which, in particular, means that the original curves do not have to be smooth but can be piecewise linear \parencite[see][91]{SrivastavaKlassen2016}.
 The SRVFs are considered elements of a Hilbert space, given by $\mathcal{L}^2([0,1],\,\mathbb{C})$ equipped with the complex inner product $\langle \cdot, \cdot \rangle$ and corresponding norm $||\cdot||$, where the complex inner product of $q,q' \in \mathcal{L}^2([0,1],\,\mathbb{C})$ is given by
 $$ \langle q, q' \rangle = \int_0^1 \overline{q(t)} q'(t) dt \,, $$
 with $\overline{z} = \operatorname{Re}(z) - i \operatorname{Im}(z)$ denoting the complex conjugate.
@@ -111,23 +108,33 @@ As we can always recover the original curve up to translation, the SRV represent
 This means we can perform any shape analysis equivalently on SRV level, as we can later always transform the results of e.g.\ a mean calculation back to original curve level.
 \textbf{[Show this?]}
 
+
+
 \begin{lemma}
   The actions of the translation, scaling, rotation, and re-parametrization groups commute on SRV level.
 \end{lemma}
 
 \begin{proof} The SRVF $\tilde q(t)$ of  $\tilde\beta(t) = \lambda e^{i\theta}\beta\left(\gamma(t)\right) + \xi$ is given by
 $$ \tilde q (t) 
-  = \frac{\dot{\tilde\beta}(t)}{\sqrt{| \dot{\tilde\beta}(t) |}} 
   = \frac{\lambda e^{i\theta} \dot\beta\left(\gamma(t)\right) \dot\gamma(t)}{\sqrt{||\lambda e^{i\theta} \dot\beta\left(\gamma(t)\right) \dot\gamma(t)||}} 
   = \sqrt{\lambda} e^{i\theta} \frac{\dot\beta\left(\gamma(t)\right)}{\sqrt{||\dot\beta\left(\gamma(t)\right)||}} \sqrt{\dot\gamma(t)} 
   = \sqrt\lambda e^{i\theta} \left( q \circ \gamma \right) \sqrt{\dot\gamma(t)},$$
 where the result is the same, irrespective of the order of applying the transformations.
 \end{proof}
 
-\noindent It follows, that the individual transformations translate to SRV level by i.) $(\xi, q) \xmapsto{\text{Trl}} q$, ii.) $(\lambda, q) \xmapsto{\text{Scl}} \sqrt\lambda q$, iii.) $(\theta, q) \xmapsto{\text{Rot}} e^{i\theta} q$, iv.) $(\gamma, q) \xmapsto{\text{Wrp}} (q \circ \gamma) \sqrt{\dot\gamma}$, where, in particular, the SRVF is invariant to translations of the original curve.
-The invariance with respect to translation is a nice property of the SRV framework, as it means that we can identify the shape of a curve as the equivalence class of its respective SRVF modulo scaling, rotation, and warping, but we do not need to consider translation.
+\begin{remark}
+  It follows, that the individual transformations translate to SRV level by 
+  $$\text{i.)} \,\,(\xi, q) \xmapsto{\text{Trl}} q,\quad 
+    \text{ii.)} \,\, (\lambda, q) \xmapsto{\text{Scl}} \sqrt\lambda q,\quad
+    \text{iii.)} \,\, (\theta, q) \xmapsto{\text{Rot}} e^{i\theta} q,\quad
+    \text{iv.)} \,\, (\gamma, q) \xmapsto{\text{Wrp}} (q \circ \gamma) \sqrt{\dot\gamma}.$$
+\end{remark}
+
+\noindent Here, in particular, the SRVF is invariant to translations of the original curve.
+The is a nice property of the SRV framework, as it means that we can identify the shape of a curve as the equivalence class of its respective SRVF modulo scaling, rotation, and warping, but we do not need to consider translation.
+
 \begin{definition}[Shape (SRV level)]
-  The \textbf{shape} of an absolutely continuous, planar curve $\beta \in \mathcal{AC}([0,1],\, \mathbb{C})$ is given by the equivalence class of its SRV representation $q = \frac{\dot\beta(t)}{\sqrt{|\dot\beta(t)|}} \in \mathbb{L}^2([0,1],\,\mathbb{C})$ modulo scaling, rotation and re-parametrization
+  The \textbf{shape} $[\beta]$ of an absolutely continuous, planar curve $\beta \in \mathcal{AC}([0,1],\, \mathbb{C})$ can be equivalently represented by the equivalence class $[q]$ of its SRV representation $q = \frac{\dot\beta(t)}{\sqrt{|\dot\beta(t)|}} \in \mathbb{L}^2([0,1],\,\mathbb{C})$ modulo scaling, rotation and re-parametrization
   $$[q] = \left\{\sqrt\lambda e^{i\theta}(q \circ \gamma) \sqrt{\dot\gamma(t)} \,|\, \lambda \in \mathbb{R}^+,\, \theta \in [0,2\pi],\, \gamma
   \in \Gamma\right\},$$
   and it holds that $[\beta] \cong [q]$. The \textbf{shape space} can then be identified with 
@@ -139,6 +146,20 @@ The invariance with respect to translation is a nice property of the SRV framewo
 
 \section{The Elastic Full Procrustes Distance for Planar Curves}
 \label{theo:proc}
+Going forward, we will now work in the SRV framework and use the elastic metric for distance calculations between shapes.
+This means, instead of optimizing over the $\mathbb{L}^2$ distance between the original curves, we optimize over the $\mathbb{L}^2$ distance between their respective SRVFs.
+For two absolutely continuous curves $\beta_1, \beta_2 \in \mathcal{AC}([0,1],\,\mathbb{C})$ with respective SRV curves $q_1, q_2 \in \mathbb{L}^2([0,1],\,\mathbb{C})$ we might define the distance between their shapes as
+$$d([\beta_1], [\beta_2]) = 
+  \inf_{\tilde q_1 \in [q_1],\,\tilde q_2 \in [q_2]} || \tilde q_1 - \tilde q_2 ||_{\mathbb{L}^2}\,,$$
+where we can also explicitly optimize over all possible transformations
+$$d([\beta_1], [\beta_2]) = 
+  \inf_{\lambda_{1/2} \in \mathbb{R}^+,\,\theta_{1/2} \in [0,2\pi],\, \gamma_{1/2} \in \Gamma} || \sqrt{\lambda_1} e^{i\theta_1}(\tilde q_1 \circ \gamma_1) \sqrt{\dot\gamma_1} - \sqrt{\lambda_2} e^{i\theta_2}(\tilde q_2 \circ \gamma_2) \sqrt{\dot\gamma_2} ||_{\mathbb{L}^2}\,.$$
+
+\begin{definition}[Elastic distance \parencite{SrivastavaEtAl2011}]
+  For $\beta_1$, $\beta_2 \in \mathcal{AC}([0,1],\,\mathbb{C})$ with $[\beta_1]_{\text{Trl+Wrp}}$, $[\beta_2]_{\text{Trl+Wrp}}$ their respective equivalence classes modulo translation and warping, the \textbf{elastic distance} between $[\beta_1]_{\text{Trl+Wrp}}$ and $[\beta_2]_{\text{Trl+Wrp}}$ is given by
+  $$d([\beta_1]_{\text{Trl+Wrp}},\, [\beta_2]_{\text{Trl+Wrp}}) = \inf_{\gamma_1, \gamma_2 \in \Gamma} || (q_1 \circ \gamma_1) \sqrt{\dot\gamma_1}- (q_2 \circ \gamma_2) \sqrt{\dot\gamma_2} ||,$$
+\end{definition}
+
 The \textit{full Procrustes distance} is a widely used distance function in
 classical shape analysis that allows for scale and rotation invariant shape
 distance calculation.
