--- a/tex/sections/3-estimation.tex
+++ b/tex/sections/3-estimation.tex
@@ -1,49 +1,15 @@
 
-Let $\beta$ be a continuous planar curve.
-It can be represented in a parameterized form in $\mathbb{R}^2$ as
-$$ \beta : [0,1] \rightarrow \mathbb{R}^2,\quad \beta(t) = ( x(t), y(t)) \,, $$
-where $x, y$ are scalar-valued \textit{coordinate functions} of $\beta$, parametrized by $t$.
-We can equivalently represent a planar curve using complex numbers as
-$$ \beta : [0,1] \rightarrow \mathbb{C},\quad \beta(t) = x(t) + iy(t) \,, $$
-with the added benefit that complex notation often simplifies calculations in the 2D case.
 
-For a set of planar curves $\beta_1,\dots,\beta_n : [0,1] \rightarrow \mathbb{C}$, either centered with $\langle \beta_i, \mathbb{1} \rangle$ or with no relative translation to each other, the \textit{full Procrustes mean} $\hat{\mu}$ is then defined as the curve minimizing the sum of squared \textit{full Procrustes distances} from each $\beta_i$ to an unknown unit size mean configuration $\mu$, that is
-\begin{align*}
-    \hat{\mu} =& \argmin_{\mu:[0,1]\rightarrow\mathbb{C}} \sum_{i=1}^n d^2_F(\mu,\beta_i)
-    \quad\text{s.t.}\,\, ||\mu|| = 1 \\
-    =& \argmin_{\mu:[0,1]\rightarrow\mathbb{C}} \sum_{i=1}^n 1 - \frac{\langle \mu, \beta_i \rangle \langle \beta_i, \mu \rangle}{\langle \mu, \mu \rangle \langle \beta_i, \beta_i \rangle}
-    \quad\text{s.t.}\,\, ||\mu|| = 1
-\end{align*}
-which we can be further simplified by normalizing $\beta_i := \frac{\beta_i}{|| \beta_i ||}$ and using $\langle \mu, \mu \rangle = 1$
-$$ \hat{\mu} = \argmax_{\mu:[0,1]\rightarrow\mathbb{C}} \sum_{i=1}^n \langle \mu, \beta_i \rangle \langle \beta_i, \mu \rangle \quad\text{s.t.}\,\, ||\mu|| = 1. $$
-The expression for $d^2_F(\mu,\beta_i)$ in the case of planar curves is derived in appendix \ref{app:deriv-full-proc-dist}.
+\section{Efficient Estimation using Hermitian Covariance Smoothing}
+Consider the following model for independent curves
+\begin{equation}
+    Y_i(t_{ij}) = \mu(t_{ij}, \mathbf{x}_i) + E_i(t_{ij}) + \epsilon(t_{ij}),
+    \quad j = 1,\dots,D_i, \, i = 1,\dots,n,
+\end{equation}
+\textbf{[Fast symmetric additive cov smoothing, skew-symmetry, population vs. sample, etc.]}
 
 
-
-
-
-\section{The Full Procrustes mean}
-Consider a set of planar SRV curves $q_1,\dots,q_n : [0,1] \rightarrow \mathbb{C}$ of unit length $||q_i|| = 1$ for all $i$.
-The \textit{full Procrustes mean} $\hat{\mu}$ is given by
-\begin{align*}
-    \hat{\mu} =& \argmax_{\mu:[0,1]\rightarrow\mathbb{C}} \sum_{i=1}^n \langle \mu, q_i \rangle \langle q_i, \mu \rangle
-    \quad\text{s.t.}\,\, ||\mu|| = 1 \\
-    =& \argmax_{\mu:[0,1]\rightarrow\mathbb{C}} \sum_{i=1}^n
-    \int_0^1 \overline{\mu(t)} q_i(t) \, dt \int_0^1 \overline{q_i(s)} \mu(s) \, ds
-    \quad\text{s.t.}\,\, ||\mu|| = 1 \\
-    =& \argmax_{\mu:[0,1]\rightarrow\mathbb{C}}  \int_0^1 \int_0^1
-    \overline{\mu(t)} \underbrace{\left( \sum_{i=1}^n q_i(t) \overline{q_i(s)} \right)}_{\coloneqq \, n \hat{C}(s,t)} \mu(s) \, dt ds
-    \quad\text{s.t.}\,\, ||\mu|| = 1 \\
-    =& \argmax_{\mu:[0,1]\rightarrow\mathbb{C}} \int_0^1
-    \overline{\mu(t)} \int_0^1 \hat{C}(s,t) \mu(s) \, ds dt
-    \quad\text{s.t.}\,\, ||\mu|| = 1
-\end{align*}
-with the solution given by the eigenfunction corresponding to the largest eigenvector of the complex empirical covariance function $\hat{C}(s,t) = n^{-1} \sum_{i=1}^n q_i(t) \overline{q_i(s})$.
-
-
-
-
-\section{The Full Procrustes Mean in a fixed basis}
+\section{Estimating the Full Procrustes Mean in a Fixed Basis}
 To avoid having to sample the estimated covariance surface $\hat{C}(s,t)$ on a large grid when calculating its leading eigenfunction, it might be preferable to calculate this eigenfunction from the vector of basis coefficients directly.
 After choosing a basis representation $b = (b_1, \dots, b_k)$ with $b_j : \mathbb{R} \rightarrow \mathbb{R}$ real-valued basis functions, we want to estimate complex coefficients $\theta_j \in \mathbb{C}$ so that the Full Procrustes mean of SRV curves is given by $\hat{\mu}(t) = \sum_{j=1}^k \hat{\theta}_j b_j(t) = b^T \hat{\theta}$:
 \begin{align*}
@@ -85,14 +51,5 @@ One may solve this by using Lagrange optimization with the Langrangian
 
 
 
-
-
-\section{Estimation of the covariance surface $C(s,t)$}
-Consider the following model for independent curves
-\begin{equation}
-    Y_i(t_{ij}) = \mu(t_{ij}, \mathbf{x}_i) + E_i(t_{ij}) + \epsilon(t_{ij}),
-    \quad j = 1,\dots,D_i, \, i = 1,\dots,n,
-\end{equation}
-\textbf{[Fast symmetric additive cov smoothing, skew-symmetry, population vs. sample, etc.]}
-
+\section{Numerical Integration of the Procrustes Fits}
 
