--- a/tex/sections/a-appendix.tex
+++ b/tex/sections/a-appendix.tex
@@ -1,4 +1,6 @@
-\subsection{Derivation of the Full Procrustes Distance for Functional Data}
+\section{Additional Proofs and Derivations}
+
+\paragraph{Derivation of the Full Procrustes Distance for Functional Data}
 \label{app:deriv-full-proc-dist}
 Consider two curves $\beta_1, \beta_2 : [0,1] \rightarrow \mathbb{C}$ with $\langle \beta_1, \mathbb{1} \rangle = \langle \beta_2, \mathbb{1} \rangle = 0$ where $\mathbb{1}$ is the constant function $\mathbb{1}(t) = 1$ for all $t \in [0,1]$.
 Then $\beta_1$ and $\beta_2$ can be considered to be centered as
@@ -72,3 +74,6 @@ $$ d_F = \sqrt{1 - \langle \tilde\beta_1, \tilde\beta_2 \rangle
 = \sqrt{1 - \frac{ \langle \beta_1, \beta_2 \rangle \langle \beta_2, \beta_1 \rangle}{\langle \beta_1, \beta_1 \rangle \langle \beta_2, \beta_2 \rangle}}$$
 
 
+\section{Discussion of Possible Extensions to Closed Curves}
+
+\section{Shape-Smoothing Using the Estimated Covariance-Surface}
