--- a/tex/sections/b-supplements.tex
+++ b/tex/sections/b-supplements.tex
@@ -1,3 +1,3 @@
-\subsection{Implementation Notes}
+\section{Dataset Replication Guide}
 
-\subsection{Replication Guide}
+\section{Implementation Notes}
